www/static/css/styles.css
/* Change initial-value to change the default accent hue. */
@property --accent-hue {
	syntax: '<number>';
	initial-value: 200;
	inherits: false;
}

:root {
	--header-height: 56px;
	--footer-height: 52px;
	--accent: hsl(var(--accent-hue), 50%, 50%);
}

/* Default to dark mode if data-theme is an invalid value */
html, [data-theme='dark'] {
	--bg-1: oklch(0.2 0.0125 var(--accent-hue));
	--bg-2: oklch(0.15 0.00625 var(--accent-hue));
	--bg-3: oklch(0.5 0.125 var(--accent-hue));
	--text-1: oklch(0.9 0.0625 var(--accent-hue));
	--text-2: oklch(0.8 0.0625 var(--accent-hue));
	--text-3: oklch(0.7 0.0625 var(--accent-hue));
}

[data-theme='light'] {
	--bg-1: oklch(0.95 0.0625 var(--accent-hue));
	--bg-2: oklch(0.8 0.0625 var(--accent-hue));
	--bg-3: oklch(0.65 0.0625 var(--accent-hue));
	--text-1: oklch(0.1 0.0625 var(--accent-hue));
	--text-2: oklch(0.2 0.0625 var(--accent-hue));
	--text-3: oklch(0.3 0.0625 var(--accent-hue));
}

html {
	transition: --accent-hue 5s linear;
	margin: 0;
	padding: 0;
	width: 100%;
	min-height: 100%;
	overflow: hidden;
	scrollbar-width: thin;
	color: var(--text-1);
	font-size: 1.2rem;
	line-height: 1.5em;
	font-family: 'Ubuntu', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
	display: grid;
	position: relative;
	grid-template-rows: var(--header-height) 1fr var(--footer-height);
	background: var(--bg-1);
	width: 100%;
	min-height: 100svh;
	overflow: hidden;
}

@font-face {
	font-style: normal;
	font-weight: normal;
	src: url('/static/fonts/OpenDyslexic-Regular.otf') format('opentype');
	font-family: 'OpenDyslexic';
	font-display: swap;
}

[data-dyslexic='true'] {
	font-family: 'OpenDyslexic', 'Comic Sans MS', 'Comic Sans', 'Lucida Sans', 'Lucida Sans Regular', 'Ubuntu', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.subtext {
	color: var(--text-2);
	font-size: .8em;
}

a {
	color: inherit;
	&:hover, &:focus-visible {
		color: var(--accent);
	}
}

@keyframes dummy { 0% {} }
button {
	--anim-length: 150ms;
	display: flex;
	justify-content: center;
	align-items: center;
	outline: transparent solid 0;
	outline-offset: 2px;
	text-align: center;
	&:hover, &:focus-visible {
		scale: 1.05;
		filter: brightness(1.25);
		outline: var(--accent) solid 2px;
	}
	&.active, &:active {
		scale: 0.95;
		filter: brightness(1.5) saturate(.8) contrast(.8);
		animation: dummy 150ms linear;
		outline: transparent solid 2px;
		outline-offset: 8px;
	}
	[data-motion='true'] & {
		transition:
			scale var(--anim-length) linear,
			outline var(--anim-length) linear,
			outline-offset var(--anim-length) linear,
			filter var(--anim-length) linear;
	}
}

h1 {
	margin-top: 0;
}

article {
	box-sizing: border-box;
	border-radius: 12px;
	background: var(--bg-2);
	padding: 2em;
	width: 100%;
	height: 100%;
}

main {
	display: flex;
	padding: 48px;
	overflow: scroll;
}

#sidebar {
	border: var(--accent) 1px solid;
	border-right: color-mix(var(--accent) 50%, var(--bg-2)) 1px solid;
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
	width: 30%;
	min-width: 350px;
	@media (orientation: portrait) {
		min-width: 90vw;
	}
}

#projects-grid {
	display: grid;
	border: var(--accent) 1px solid;
	border-left: unset;
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
	width: 100%;
	min-width: 350px;
	@media (orientation: portrait) {
		min-width: 90vw;
	}
}

#config-menu {
	display: flex;
	position: fixed;
	justify-content: center;
	align-items: center;
	backdrop-filter: grayscale(.5);
	box-sizing: border-box;
	border: unset;
	background: oklch(0 0 0 / .8);
	width: 100vw;
	max-width: unset;
	height: 100dvh;
	max-height: unset;
	color: white;

	[data-motion='true'] & {
		transition:
			opacity 1s ease-out,
			border-radius 1s ease-out,
			translate 1s ease-out;
	}

	&:not([open]) {
		translate: 0 100%;
		opacity: 0;
		border-radius: 128px;
	}

	h1 {
		text-align: center;
	}

	.subtext {
		margin-top: 10px;
		max-width: calc(100% - 4em);
	}

	form {
		display: grid;
		width: 25vw;
		min-width: 15em;
		max-width: 25em;
		height: fit-content;
		max-height: 100%;
		.option {
			display: grid;
			grid-template-columns: 2em 1fr 4em;
			margin-top: 20px;
			width: 100%;
			height: fit-content;
			> *:not(.switch) {
				display: inline-flex;
				align-items: center;
				margin-right: 1em;
			}
		}
	}

	#enter-site {
		margin-top: 20px;
		border: none;
		border-radius: 8px;
		background-color: oklch(55% 0.1 145);
		padding: 12px 24px;
		color: inherit;
		&:hover, &:focus-visible {
			cursor: pointer;
		}
	}
}

@keyframes beat {
	0% {
		outline: color-mix(var(--accent) 25%, transparent) 1px solid;
		outline-offset: 0;
	}
	100% {
		outline: transparent 0 solid;
		outline-offset: 32px;
	}
}

header {
	display: flex;
	position: static;
	align-items: center;
	box-sizing: border-box;
	border-bottom: var(--accent) 1px solid;
	background: var(--bg-2);
	padding: 12px;
	width: 100%;
	height: 100%;
	> button {
		outline: transparent solid 0;
		border: var(--text-1) solid 2px;
		border-radius: calc(1px/0);
		background: var(--bg-1);
		aspect-ratio: 1/1;
		height: 2em;
		color: var(--text-1);
		&:hover, &:focus-visible {
			border-width: 0;
		}
	}
	[data-motion="true"] & {
		animation: beat 1500ms infinite ease-out;
	}
}

@keyframes background-slide {
	100% {
		transform: translate(40px, -40px);
	}
}

#background {
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;
	width: 100%;
	min-height: 100%;
	overflow: hidden;

	&::before {
		position: absolute;
		top: -100px;
		left: -100px;
		rotate: -3deg;
		opacity: .15;
		background: radial-gradient(var(--accent) 1px, transparent 1px);
		background-size: 40px 40px;
		width: calc(100% + 200px);
		height: calc(100% + 200px);
		content: "";
	}

	[data-theme='light'] &::before {
		opacity: .4;
	}

	[data-motion='true'] &::before {
		animation: background-slide 5s linear infinite;
	}
}

footer {
	position: static;
	box-sizing: border-box;
	border-top: var(--accent) 1px solid;
	background: var(--bg-2);
	width: 100%;
	height: 100%;
	[data-motion="true"] & {
		animation: beat 1500ms infinite ease-out;
	}
}

.switch {
	--switch-width: 4em;
	--padding: 4px;
	--knob-size: calc((var(--switch-width) / 2) - (var(--padding) * 2));
	--travel-distance: calc(var(--switch-width) - var(--knob-size) - (var(--padding) * 2));
	display: inline-block;

	position: relative;
	aspect-ratio: 2 / 1;
	width: var(--switch-width);

	input {
		position: absolute;
		opacity: 0;
		width: 0;
		height: 0;
	}

	.slider {
		position: absolute;
		cursor: pointer;
		inset: 0;
		border-radius: calc(1px/0);
		background-color: oklch(20% 0 300);

		[data-motion='true'] & {
			transition: background-color 0.2s ease;
		}

		&::before {
			position: absolute;
			top: var(--padding);
			left: var(--padding);
			z-index: 2;
			border-radius: calc(1px/0);
			background-color: white;
			width: var(--knob-size);
			height: var(--knob-size);
			content: "";
		}

		[data-motion='true'] &::before {
			transition: transform 200ms cubic-bezier(0.4, 0, 0.2, 1);
		}
	}

	input:checked + .slider {
		background-color: oklch(55% 0.1 145);

		&::before {
			transform: translateX(var(--travel-distance));
		}
	}

	input:hover + .slider, input:focus-visible + .slider {
		outline: 2px solid oklch(55% 0.1 145);
		outline-offset: 2px;
	}

	.state-text {
		position: absolute;
		top: 50%;
		transform: translateY(-50%);
		z-index: 1;
		pointer-events: none;
		font-family: sans-serif;
		user-select: none;

		&:first-of-type {
			left: 0.5em;
		}

		&:last-of-type {
			right: 0.5em;
		}
	}
}

